# Spike

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LightEngine.sln  README.md  imgui.ini  log.txt  premake5.lua
.github/workflows/: CI_cmake_windows.yml  CI_premake_windows.yml  WindowsBuild.yml  build.yml  ci.yml  ci_windows_cmake.yml  travis.yml
ExampleApp/: CMakeLists.txt
ExampleApp/src/: CameraController.cs  Player.cs  Test.cs  Test2.cs
LightEngine/: LightEngine.vcxproj  LightEngine.vcxproj.filters  premake5.lua
LightEngine/src/: LightEngine.h  Test.cpp  Test.h  lepch.cpp  lepch.h
LightEngine/src/LightEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
LightEngine/src/LightEngine/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timestep.h  Window.h
LightEngine/src/LightEngine/Events/: Event.h  (+3 more)
Lightning-Editor/: imgui.ini  premake5.lua
Lightning-Editor/assets/scenes/: Example.light  Example2.light  Fake3D.light
Lightning-Editor/assets/shaders/: Texture.glsl
Lightning-Editor/src/: EditorLayer.cpp  EditorLayer.h  LightningEditorApp.cpp
Lightning-Editor/src/Panels/: Console.cpp  Console.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Resources/docs/: Setup.md
Sandbox/: CMakeLists.txt  LightEngineProfile-Runtime.json  LightEngineProfile-Shutdown.json  LightEngineProfile-Startup.json  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  premake5.lua
Sandbox/assets/shaders/: Texture.glsl
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
ScriptEngine/: CMakeLists.txt
ScriptEngine/src/Spike/: Console.cs  Entity.cs  Input.cs  InputCodes.cs
Spike/: CMakeLists.txt  premake5.lua
Spike-Editor/: CMakeLists.txt  imgui.ini  premake5.lua
Spike-Editor/assets/meshes/: Cone.fbx  Sphere.fbx  i.fbx
Spike-Editor/assets/scenes/: Example.spike  Example2.light  Example2.spike  ScriptingTest.spike  SingleSprite.spike
Spike-Editor/assets/shaders/: FlatColorShader.glsl  MeshShader.glsl  MeshShader.hlsl  Texture.glsl  Texture.hlsl
Spike-Editor/assets/shaders/GLSL/: Skybox.glsl
Spike-Editor/assets/shaders/HLSL/: MeshShader.hlsl  Skybox.hlsl
Spike-Editor/src/: EditorLayer.cpp  EditorLayer.h  FontAwesome.h  SpikeEditorApp.cpp  TextEditor.cpp  TextEditor.h
Spike-Editor/src/Panels/: CodeEditorPanel.cpp  CodeEditorPanel.h  Console.cpp  Console.h  ConsolePanel.cpp  ConsolePanel.h  MaterialPanel.cpp  MaterialPanel.h  Panel.cpp  Panel.h  ProfilerPanel.cpp  ProfilerPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  VaultPanel.cpp  VaultPanel.h
Spike-Editor/src/UIUtils/: UIUtils.cpp  UIUtils.h
Spike-ScriptCore/src/: Console.cs  Dummy.cs
Spike-ScriptCore/src/Spike/: Entity.cs
Spike/assets/shaders/: FlatColorShader.glsl  Texture.glsl
Spike/src/: Spike.h  spkpch.cpp  spkpch.h
Spike/src/Platform/DX11/: DX11ConstantBuffer.cpp  DX11ConstantBuffer.h  DX11Context.cpp  DX11Context.h  DX11Framebuffer.cpp  DX11Framebuffer.h  DX11IndexBuffer.cpp  DX11IndexBuffer.h  DX11Internal.cpp  DX11Internal.h  DX11Pipeline.cpp  DX11Pipeline.h  DX11RendererAPI.cpp  DX11RendererAPI.h  DX11Shader.cpp  DX11Shader.h  DX11Texture.cpp  DX11Texture.h  DX11VertexBuffer.cpp  DX11VertexBuffer.h
Spike/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLConstantBuffer.cpp  OpenGLConstantBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Spike/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Spike/src/Spike/BuiltInAssets/: GLSLShaders.h
Spike/src/Spike/Core/: Application.cpp  Application.h  Base.h  Buffer.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Ref.h  Timestep.h  UUID.cpp  UUID.h  Vault.cpp  Vault.h  Window.h
Spike/src/Spike/Debug/: Instrumentor.h
Spike/src/Spike/EngineAssets/: EngineAssets.h
Spike/src/Spike/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Spike/src/Spike/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Spike/src/Spike/Math/: AABB.h  Math.cpp  Math.h
Spike/src/Spike/Physics/2D/: Physics2D.cpp  Physics2D.h
Spike/src/Spike/Renderer/: Buffer.cpp  Buffer.h  Camera.h  ConstantBuffer.cpp  ConstantBuffer.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshGenerator.cpp  MeshGenerator.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererAPISwitch.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  SubTexture2D.cpp  (+7 more)
Spike/src/Spike/Scene/: Components.h  Entity.cpp  Entity.h  LightningHandeler.cpp  LightningHandeler.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Spike/src/Spike/Scripting/: ScriptCalls.cpp  ScriptCalls.h  ScriptEngine.cpp  ScriptEngine.h  ScriptRegistry.cpp  ScriptRegistry.h  ScriptUtils.h
Spike/src/Spike/Utility/: Clock.h  FileDialogs.cpp  FileDialogs.h  PlatformUtils.h  Random.h
bin-int/Debug-x64/LightEngine/: LightEngine.dll.recipe  vc142.idb
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  vc142.idb
scripts/: CMakeUtils.cmake  WindowsCleanBuild.bat  WindowsGenProjectsCMake.bat
(+87 files in other folders)
